--- a/control.html
+++ b/control.html
@@ -214,7 +214,7 @@
           <!-- Bid Controls -->
           <h3 class="section-title">Current Bid</h3>
           <div class="bid-input-group">
-            <input type="text" class="bid-input" id="bidInput" placeholder="Enter bid amount" value="0">
+            <input type="text" class="bid-input" id="bidInput" placeholder="Enter bid in millions" value="0">
           </div>
 
           <div class="bid-increment-buttons">
