--- a/index.html
+++ b/index.html
@@ -31,17 +31,9 @@
       <!-- Main Content Area -->
       <main class="main-content">
         <!-- Welcome/Idle View -->
-        <div class="view teaser-view" id="welcomeView">
-          <img src="assets/logo.png" alt="Tournament Logo" class="welcome-logo" onerror="this.style.display='none'">
-          <div class="teaser-container">
-            <div class="teaser-label">Welcome to</div>
-            <h1 class="teaser-title" id="welcomeTitle">Republic Cup 2026</h1>
-            <p class="teaser-funfact">
-              The Football Auction is about to begin! Get ready for an exciting
-              session of team building.
-            </p>
-            <p class="teaser-hint">Waiting for auction to start...</p>
-          </div>
+        <div class="view teaser-view" id="welcomeView" style="flex-direction: column; justify-content: center; align-items: center;">
+          <img src="assets/logo.png" alt="Tournament Logo" class="welcome-logo" style="max-width: 400px; max-height: 400px; margin-bottom: 2rem;" onerror="this.style.display='none'">
+          <p class="teaser-hint" style="font-size: 1.5rem; letter-spacing: 3px;">BEGINNING SOON</p>
         </div>
 
         <!-- Teaser View (Fun Fact) - DRAMATIC MYSTERY REVEAL -->
